--- a/example/index.html
+++ b/example/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
   <head>
-    <link href="app.css" rel="stylesheet" type="text/css"/>
-    <script type="text/javascript" src="app.js"></script>
+    <link href="grocery-list.css" rel="stylesheet" type="text/css"/>
+    <script src="grocery-list.js" type="text/javascript"></script>
   </head>
   <body>
   </body>
